version/0.25/_sources/api/solver/_autosummary/settings/species_mass_fraction_1.rst.txt
:orphan:

.. _species_mass_fraction_1:

species_mass_fraction
=====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.species_mass_fraction_1.species_mass_fraction
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`rename <rename>`                                              Rename the object.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`variables_child <variables_child>`


.. rubric:: Included in:

============================   =======================

Parent                                         Summary

============================   =======================
:ref:`ablation <ablation_1>`       Help not available.

============================   =======================

